# north

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  cliff.toml  diesel.toml  docker-compose.test.yml  docker-compose.yml  justfile  rust-toolchain.toml
.github/: commit-template.md
.github/workflows/: chart.yml  ci.yml  e2e.yml  release.yml  test.yml
chart/: .helmignore  Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  pvc.yaml  secret.yaml  (+3 more)
crates/app/: Cargo.toml
crates/app/src/: app.rs  constants.rs  lib.rs  util.rs
crates/app/src/atoms/: mod.rs  text.rs
crates/app/src/components/: completion_toggle.rs  connectivity_monitor.rs  drag_drop.rs  dropdown.rs  enriched_markdown.rs  icons.rs  keybindings_modal.rs  layout.rs  markdown.rs  mirror_overlay.rs  mod.rs  nav.rs  rich_title.rs  status_bar.rs  task_card.rs  task_form.rs  task_meta.rs  theme_toggle.rs  visibility_toggle.rs
crates/app/src/components/autocomplete/: container.rs  mod.rs  view.rs
crates/app/src/components/date_picker/: container.rs  mod.rs  view.rs
crates/app/src/components/enriched_markdown/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/components/filter_autocomplete/: container.rs  mod.rs
crates/app/src/components/project_picker/: container.rs  mod.rs  view.rs
crates/app/src/components/recurrence_modal/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/components/recurrence_modal/components/: day_checkbox.rs  mod.rs  preset_chip.rs  radio_chip.rs
crates/app/src/components/subtask_form/: container.rs  mod.rs  view.rs
crates/app/src/components/subtask_list/: container.rs  mod.rs  view.rs
crates/app/src/components/tag_picker/: container.rs  mod.rs  view.rs
crates/app/src/components/task_card/: container.rs  mod.rs  view.rs
crates/app/src/components/task_detail_modal/: container.rs  mod.rs  view.rs
crates/app/src/components/task_list/: completed_section.rs  container.rs  mod.rs  view.rs
crates/app/src/containers/: mod.rs
crates/app/src/containers/autocomplete/: container.rs  mod.rs  view.rs
crates/app/src/containers/inline_task_input/: container.rs  mod.rs  view.rs
crates/app/src/containers/project_picker/: container.rs  view.rs
crates/app/src/containers/sidebar/: container.rs  mod.rs  view.rs
crates/app/src/containers/smart_textarea/: container.rs  mod.rs  view.rs
crates/app/src/containers/tag_picker/: container.rs  view.rs
crates/app/src/containers/task_checkbox/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/containers/task_create_modal/: container.rs  mod.rs  view.rs
crates/app/src/containers/task_detail_modal/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/containers/task_inline_form/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/containers/task_list/: completed_section.rs  container.rs  mod.rs  view.rs
crates/app/src/containers/task_list_item/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/containers/task_list_item/components/: inline_subtask_list.rs  mod.rs  project_prefix.rs  someday_prefix.rs
crates/app/src/containers/task_meta/: container.rs  mod.rs  task_meta_item.rs  view.rs
crates/app/src/containers/traversable_task_list/: container.rs  controller.rs  mod.rs  tree.rs  view.rs
crates/app/src/libs/: actionable.rs  keep_completed_visible.rs  keep_task_visible.rs  mod.rs  reactive_recurrence_rule.rs  textarea.rs
crates/app/src/pages/: all_tasks.rs  all_tasks_old.rs  archive.rs  filter.rs  filter_help.rs  filter_old.rs  inbox.rs  login.rs  mod.rs  project.rs  review.rs  settings.rs  today.rs
crates/app/src/pages/all_tasks/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/pages/archive/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/pages/filter/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/pages/inbox/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/pages/project/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/pages/review/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/pages/settings/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/pages/someday/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/pages/today/: container.rs  controller.rs  mod.rs  view.rs
crates/app/src/server_fns/: auth.rs  filters.rs  mod.rs  projects.rs  settings.rs  tags.rs  tasks.rs
crates/app/src/stores/: lookup_store.rs  mod.rs  task_store.rs
crates/core/: Cargo.toml
crates/core/src/: filter_service.rs  filter_translator.rs  lib.rs  project_service.rs  stats_service.rs  tag_service.rs  task_service.rs  url_service.rs  user_service.rs
crates/core/src/filter/: autocomplete.rs  context.rs  dsl.rs  field_registry.rs  mod.rs  parser.rs  service.rs  text_parser.rs  translator.rs
crates/server/: Cargo.toml
crates/server-fns/: Cargo.toml
crates/server-fns/src/: auth.rs  filters.rs  lib.rs  ping.rs  projects.rs  settings.rs  tags.rs  tasks.rs
crates/server/src/: error.rs  main.rs  seed.rs
crates/server/src/auth/: jwt.rs  middleware.rs  mod.rs
crates/server/src/routes/: auth.rs  filters.rs  mod.rs  projects.rs  stats.rs  tasks.rs
crates/stores/: Cargo.toml
crates/stores/src/: app_store.rs  browser_storage_store.rs  filter_dsl_store.rs  hooks.rs  lib.rs  modal_store.rs  project_store.rs  saved_filter_store.rs  settings_store.rs  status_bar_store.rs  tag_store.rs  task_create_modal_store.rs  task_detail_modal_store.rs  task_store.rs
docs/: ARCHITECTURE.md  DESIGN.md  NOTES.md  PRD-drag-and-drop.md  PRD-subtasks.md  PRD.md  RELEASE_AUTOMATION.md  RELEASE_NOTES.md  UI_KIT.md  feat-someday-i1.md  regress.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
migrations/: 20250101000001_initial.sql  20250209000001_rename_start_date_to_start_at.sql  20250210000001_reviewed_at_to_date.sql
scripts/: extract-user-notes.sh  generate-release-notes-v2.sh  generate-release-notes.sh
style/: main.css  tailwind.css
(+113 files in other folders)
