[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
north-domain = { path = "crates/domain" }
north-app = { path = "crates/app" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"

[[workspace.metadata.leptos]]
name = "north"
bin-package = "north-server"
lib-package = "north-app"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
tailwind-input-file = "style/main.css"
assets-dir = "public"
bin-default-features = false
bin-features = ["ssr"]
lib-default-features = false
lib-features = ["hydrate"]
