[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.2"

[workspace.dependencies]
north-dto = { path = "crates/dto" }
north-app = { path = "crates/app" }
north-ui = { path = "crates/ui" }
north-stores = { path = "crates/stores" }
north-repositories = { path = "crates/repositories" }
north-server-fns = { path = "crates/server-fns" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"

[[workspace.metadata.leptos]]
name = "north"
bin-package = "north-server"
lib-package = "north-app"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "0.0.0.0:5000"
reload-port = 5001
style-file = "style/main.css"
tailwind-input-file = "style/tailwind.css"
assets-dir = "public"
bin-default-features = false
bin-features = []
lib-default-features = false
lib-features = ["hydrate"]
