[package]
name = "north-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = ["leptos/hydrate", "dep:wasm-bindgen"]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:argon2",
    "dep:jsonwebtoken",
    "dep:tokio",
    "dep:http",
    "dep:axum-extra",
]

[dependencies]
north-domain = { workspace = true }

leptos = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"
leptos_axum = { version = "0.7", optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Server-only deps
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio", "postgres", "chrono", "json"] }
argon2 = { version = "0.5", optional = true }
jsonwebtoken = { version = "9", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }
http = { version = "1", optional = true }
axum-extra = { version = "0.9", optional = true, features = ["cookie"] }
wasm-bindgen = { version = "0.2", optional = true }
