[package]
name = "north-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = [
    "leptos/hydrate",
    "north-repositories/hydrate",
    "north-stores/hydrate",
    "north-server-fns/hydrate",
]
ssr = [
    "leptos/ssr",
    "north-repositories/ssr",
    "north-stores/ssr",
    "north-server-fns/ssr",
    "dep:leptos_axum",
    "dep:north-core",
    "dep:argon2",
    "dep:jsonwebtoken",
    "dep:tokio",
    "dep:http",
    "dep:axum-extra",
]

[dependencies]
north-dto = { workspace = true }
north-ui = { workspace = true }
north-stores = { workspace = true }
north-repositories = { workspace = true }
north-server-fns = { workspace = true }
north-core = { path = "../core", optional = true }

leptos = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"
leptos_axum = { version = "0.7", optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Server-only deps
argon2 = { version = "0.5", optional = true }
jsonwebtoken = { version = "9", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }
http = { version = "1", optional = true }
axum-extra = { version = "0.9", optional = true, features = ["cookie"] }
urlencoding = "2"
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["DragEvent", "DataTransfer", "HtmlElement", "DomRect"] }
