[package]
name = "north-core"
version = "0.1.0"
edition = "2021"

[dependencies]
north-db = { path = "../db" }
north-dto = { path = "../dto" }
diesel = { version = "2.2", features = ["postgres", "chrono", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
futures-util = { version = "0.3", features = ["async-await"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
