[package]
name = "north-server-fns"
version = "0.1.0"
edition = "2021"

[features]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:north-services",
    "dep:north-core",
    "dep:jsonwebtoken",
    "dep:axum-extra",
    "dep:http",
]
hydrate = ["leptos/hydrate"]

[dependencies]
north-domain = { workspace = true }
leptos = "0.7"
serde = { workspace = true }

# SSR-only
leptos_axum = { version = "0.7", optional = true }
north-services = { path = "../services", optional = true }
north-core = { path = "../core", optional = true }
jsonwebtoken = { version = "9", optional = true }
axum-extra = { version = "0.9", optional = true, features = ["cookie"] }
http = { version = "1", optional = true }
