[package]
name = "north-server"
version = "0.1.0"
edition = "2021"

[dependencies]
north-domain = { workspace = true }
north-app = { path = "../app", features = ["ssr"] }

axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
leptos = { version = "0.7", features = ["ssr"] }
leptos_axum = "0.7"
leptos_router = { version = "0.7", features = ["ssr"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"
time = "0.3"
